update assets directory by yogi

--- a/index.html
+++ b/index.html
@@ -296,10 +296,11 @@
                   </a>
                 </figure>
 
-                <a href="#" class="card-tag">Web Development</a>
+                <a href="#" class="card-tag">Pengumuman Jadwal MID Semester Genap Tahun Akademik 2023/2024</a>
 
                 <h3 class="card-title">
-                  <a href="#">Jim Morisson Says when the musics over turn off the light</a>
+                  <a href="#">Pengumuman Jadwal MID Semester Genap Tahun Akademik 2023/2024 Universitas Handayani
+                    Makassar Pengumuman MID</a>
                 </h3>
 
               </div>
@@ -315,10 +316,12 @@
                   </a>
                 </figure>
 
-                <a href="#" class="card-tag">Web Development</a>
+                <a href="#" class="card-tag">PENGUMUMAN LIBUR HARI RAYA IDUL FITRI 1445 H</a>
 
                 <h3 class="card-title">
-                  <a href="#">Jim Morisson Says when the musics over turn off the light</a>
+                  <a href="#">PENGUMUMAN LIBUR HARI RAYA IDUL FITRI 1445 H DIUMUMKAN KEPADA SELURUH CIVITAS AKADEMIKA
+                    UNIVERSITAS HANDAYANI MAKASSAR BAHWA LIBUR HARI RAYA IDUL FITRI 1445 H DITETAPKAN PADA TANGGAL 08 –
+                    15 APRIL 2024.</a>
                 </h3>
 
               </div>
@@ -334,10 +337,13 @@
                   </a>
                 </figure>
 
-                <a href="#" class="card-tag">Web Development</a>
+                <a href="#" class="card-tag">Team Robotika Trash UHM meraih juara harapan 3 di Turnamen PRSI ( Persatuan
+                  Robotik Seluruh Indonesia)</a>
 
                 <h3 class="card-title">
-                  <a href="#">Jim Morisson Says when the musics over turn off the light</a>
+                  <a href="#">Jakarta. Trash Universitas Handayani makassar mengikuti kompetisi Turnamen Robotik
+                    Indonesia piala ketua MPR RI dengan mengusung tema inovasi berkelanjutan dibidang robotika menuju
+                    indonesia Emas. Sebanyak 400 peserta dari seluruh Indonesia</a>
                 </h3>
 
               </div>
