Update Readme Profile

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
     <div class="container">
 
       <p class="copyright">
-        &copy; 2022 <a href="#" class="copyright-link">codewithsadee</a>. All Rights Reseverd
+        &copy; 2024 <a href="#" class="copyright-link">CodewithTeam</a>. Teknik Informatika
       </p>
 
       <ul class="footer-list">
