New Rilis Update README.md

--- a/index.html
+++ b/index.html
@@ -6,19 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UHM - Profile</title>
 
-  <!-- 
-    - favicon
-  -->
+  <!-- - favicon -->
   <link rel="shortcut icon" href="./assets/images/logo.png" type="image/svg+xml">
 
-  <!-- 
-    - custom css link
-  -->
+  <!-- - custom css link -->
   <link rel="stylesheet" href="./assets/css/style.css">
-
-  <!-- 
-    - google font link
-  -->
+  <!-- - google font link -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -46,27 +40,27 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="#home" class="navbar-link" data-nav-link>Home</a>
+            <a href="index.html" class="navbar-link" data-nav-link>Home</a>
           </li>
 
           <li>
-            <a href="#about" class="navbar-link" data-nav-link>About</a>
+            <a href="/resource/about.html" class="navbar-link" data-nav-link>About</a>
           </li>
 
           <li>
-            <a href="#departments" class="navbar-link" data-nav-link>Departments/Programs</a>
+            <a href="" class="navbar-link" data-nav-link>Departments/Programs</a>
           </li>
 
           <li>
-            <a href="#event" class="navbar-link" data-nav-link>News & Events</a>
+            <a href="/resource/event.html" class="navbar-link" data-nav-link>News & Events</a>
           </li>
 
           <li>
-            <a href="#gallery" class="navbar-link" data-nav-link>Gallery</a>
+            <a href="/resource/gallery.html" class="navbar-link" data-nav-link>Gallery</a>
           </li>
 
           <li>
-            <a href="#contact" class="navbar-link" data-nav-link>Contact</a>
+            <a href="/resource/contact.html" class="navbar-link" data-nav-link>Contact</a>
           </li>
 
           <li>
@@ -78,10 +72,6 @@
 
     </div>
   </header>
-
-
-
-
 
   <main>
     <article>
@@ -117,10 +107,6 @@
 
         </div>
       </section>
-
-
-
-
 
       <!-- ABOUT -->
 
@@ -168,15 +154,12 @@
               kepada masyarakat, serta berperan aktif dalam pembangunan bangsa melalui inovasi dan kolaborasi global.
             </p>
 
-            <a href="about.html" class="btn btn-primary blue">Selengkapnya</a>
+            <a href="/resource/about.html" class="btn btn-primary blue">Selengkapnya</a>
 
           </div>
 
         </div>
       </section>
-
-
-
 
 
       <!-- PORTFOLIO -->
@@ -281,7 +264,7 @@
           <h2 class="h2 section-title">Lihat Berita dan Event Baru</h2>
 
           <p class="section-text">
-            Dliquip ex ea commo do conse namber onequa ute irure dolor in reprehen derit in voluptate
+            Event atau berita ini akan selalu update di waktu yang berbeda atau
           </p>
 
           <ul class="blog-list">
@@ -353,6 +336,17 @@
 
         </div>
       </section>
+
+      <!-- end EVENT -->
+
+
+      <section class="section blog" id="gallery">
+
+        <p class="section-subtitle">Gallery</p>
+
+        <h2 class="h2 section-title">Gambar Kegiatan kampus</h2>
+      </section>
+
 
       <!--- #CONTACT-->
 
@@ -437,13 +431,7 @@
     </article>
   </main>
 
-
-
-
-
-  <!-- 
-    - #FOOTER
-  -->
+  <!-- #FOOTER -->
 
   <footer class="footer">
     <div class="container">
@@ -465,28 +453,14 @@
     </div>
   </footer>
 
-
-
-
-
-  <!-- 
-    - #BACK TO TOP
-  -->
+  <!-- #BACK TO TOP -->
 
   <a href="#top" class="back-to-top" data-back-to-top>BACK TOP</a>
 
-
-
-
-
-  <!-- 
-    - custom js link
-  -->
+  <!-- custom js link -->
   <script src="./assets/js/script.js"></script>
 
-  <!-- 
-    - ionicon link
-  -->
+  <!-- ionicon link -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
