Update to index

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="index.html" class="navbar-link" data-nav-link>Home</a>
+            <a href="../index.html" class="navbar-link" data-nav-link>Home</a>
           </li>
 
           <li>
-            <a href="/resource/about.html" class="navbar-link" data-nav-link>About</a>
+            <a href="resource/about.html" class="navbar-link" data-nav-link>About</a>
           </li>
 
           <li>
@@ -52,15 +52,15 @@
           </li>
 
           <li>
-            <a href="/resource/event.html" class="navbar-link" data-nav-link>News & Events</a>
+            <a href="resource/event.html" class="navbar-link" data-nav-link>News & Events</a>
           </li>
 
           <li>
-            <a href="/resource/gallery.html" class="navbar-link" data-nav-link>Gallery</a>
+            <a href="resource/gallery.html" class="navbar-link" data-nav-link>Gallery</a>
           </li>
 
           <li>
-            <a href="/resource/contact.html" class="navbar-link" data-nav-link>Contact</a>
+            <a href="resource/contact.html" class="navbar-link" data-nav-link>Contact</a>
           </li>
 
           <li>
