update to about

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
   <header class="header" data-header>
     <div class="container">
 
-      <a href="#">
+      <a href="index.html">
         <img src="/assets/images/header.png" alt="" width="150px">
       </a>
 
@@ -98,11 +98,8 @@
       </figure>
 
       <div class="about-content">
-
         <p class="section-subtitle">About</p>
-
         <h2 class="h2 section-title">Tentang Kampus</h2>
-
         <p class="section-text">
           Universitas Handayani adalah salah satu institusi pendidikan tinggi terkemuka di Indonesia Timur, yang
           dikenal
@@ -110,14 +107,77 @@
           dinamis, kampus ini menawarkan lingkungan belajar yang inspiratif dengan fasilitas modern dan beragam
           program studi yang komprehensif.
         </p>
-
         <p class="section-text">
           Menjadi universitas terkemuka di Asia Tenggara yang unggul dalam pendidikan, penelitian, dan pengabdian
           kepada masyarakat, serta berperan aktif dalam pembangunan bangsa melalui inovasi dan kolaborasi global.
         </p>
-
       </div>
 
+      <div class="faculty">
+        <h2>Fakultas Ilmu Komputer</h2>
+        <p>Fakultas Ilmu Komputer di Universitas Handayani Makassar berkomitmen untuk menghasilkan lulusan yang ahli di
+          bidang teknologi informasi dan komputer. Fakultas ini menawarkan berbagai program studi yang dirancang untuk
+          memenuhi kebutuhan industri dan perkembangan teknologi terkini.</p> <br>
+        <h3>Program Studi:</h3>
+        <ul>
+          <li><strong>Teknik Informatika:</strong> Program ini fokus pada pengembangan perangkat lunak, pemrograman, dan
+            sistem informasi.</li>
+          <li><strong>Sistem Informasi:</strong> Program ini menggabungkan ilmu komputer dengan bisnis, membantu
+            mahasiswa memahami bagaimana teknologi dapat digunakan untuk meningkatkan efisiensi operasional perusahaan.
+          </li> <br>
+        </ul>
+        <h3>Fasilitas:</h3>
+        <ul>
+          <li><strong>Laboratorium Komputer:</strong> Dilengkapi dengan perangkat keras dan perangkat lunak terbaru
+            untuk mendukung proses belajar mengajar.</li>
+          <li><strong>Ruang Kelas Pintar:</strong> Ruang kelas yang dilengkapi dengan teknologi terkini untuk
+            menciptakan lingkungan belajar yang interaktif.</li>
+          <li><strong>Pusat Penelitian dan Inovasi:</strong> Fasilitas yang didedikasikan untuk penelitian dan
+            pengembangan teknologi baru.</li> <br>
+        </ul>
+        <h3>Dosen dan Tenaga Pengajar:</h3>
+        <p>Fakultas ini didukung oleh dosen-dosen yang berpengalaman dan memiliki kualifikasi tinggi di bidang ilmu
+          komputer.</p> <br>
+      </div>
+
+      <div class="faculty">
+        <h2>Fakultas Hukum & Ilmu Sosial</h2>
+        <p>Fakultas Hukum & Ilmu Sosial Universitas Handayani Makassar menawarkan pendidikan yang mendalam di bidang
+          hukum dan ilmu sosial. Fakultas ini berfokus pada pengembangan keterampilan analitis, kritis, dan praktis
+          mahasiswa untuk menghadapi tantangan di dunia hukum dan masyarakat.</p> <br>
+        <h3>Program Studi:</h3>
+        <ul>
+          <li><strong>Ilmu Hukum:</strong> Program ini mempersiapkan mahasiswa untuk menjadi praktisi hukum yang
+            kompeten, dengan penekanan pada hukum nasional dan internasional.</li>
+          <li><strong>Ilmu Sosial:</strong> Program ini mencakup berbagai disiplin ilmu sosial, seperti sosiologi,
+            antropologi, dan komunikasi, yang membantu mahasiswa memahami dinamika sosial dan budaya masyarakat.</li>
+        </ul> <br>
+        <h3>Fasilitas:</h3>
+        <ul>
+          <li><strong>Ruang Sidang Simulasi:</strong> Fasilitas ini digunakan untuk praktik simulasi sidang dan
+            pelatihan keterampilan hukum.</li>
+          <li><strong>Perpustakaan Hukum:</strong> Koleksi literatur hukum yang komprehensif untuk mendukung penelitian
+            dan studi mahasiswa.</li>
+          <li><strong>Laboratorium Sosial:</strong> Fasilitas untuk penelitian dan eksperimen di bidang ilmu sosial.
+          </li> <br>
+        </ul>
+        <h3>Dosen dan Tenaga Pengajar:</h3>
+        <p>Fakultas ini terdiri dari dosen-dosen yang berpengalaman di bidang hukum dan ilmu sosial, serta praktisi yang
+          aktif di bidangnya.</p> <br>
+      </div>
+
+      <h2>Mengapa Memilih Universitas Handayani Makassar?</h2>
+      <ul>
+        <li><strong>Kurikulum Terintegrasi:</strong> Kurikulum yang dirancang untuk memenuhi standar industri dan
+          kebutuhan pasar kerja.</li> <br>
+        <li><strong>Fasilitas Modern:</strong> Fasilitas yang lengkap dan modern untuk mendukung proses belajar
+          mengajar.</li> <br>
+        <li><strong>Pengembangan Karir:</strong> Program bimbingan karir dan jaringan alumni yang kuat untuk membantu
+          mahasiswa mencapai kesuksesan profesional.</li> <br>
+        <li><strong>Kegiatan Ekstrakurikuler:</strong> Berbagai kegiatan dan organisasi mahasiswa yang mendukung
+          pengembangan soft skills dan jaringan profesional.</li>
+      </ul>
+    </div>
     </div>
   </section>
 
