--- a/index.html
+++ b/index.html
@@ -40,27 +40,27 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="../index.html" class="navbar-link" data-nav-link>Home</a>
+            <a href="index.html" class="navbar-link" data-nav-link>Home</a>
           </li>
 
           <li>
-            <a href="resource/about.html" class="navbar-link" data-nav-link>About</a>
+            <a href="about.html" class="navbar-link" data-nav-link>About</a>
           </li>
 
           <li>
-            <a href="" class="navbar-link" data-nav-link>Departments/Programs</a>
+            <a href="prodi.html" class="navbar-link" data-nav-link>Departments/Programs</a>
           </li>
 
           <li>
-            <a href="resource/event.html" class="navbar-link" data-nav-link>News & Events</a>
+            <a href="event.html" class="navbar-link" data-nav-link>News & Events</a>
           </li>
 
           <li>
-            <a href="resource/gallery.html" class="navbar-link" data-nav-link>Gallery</a>
+            <a href="gallery.html" class="navbar-link" data-nav-link>Gallery</a>
           </li>
 
           <li>
-            <a href="resource/contact.html" class="navbar-link" data-nav-link>Contact</a>
+            <a href="ontact.html" class="navbar-link" data-nav-link>Contact</a>
           </li>
 
           <li>
@@ -82,9 +82,9 @@
         <div class="container">
 
           <div class="hero-banner">
-            <img src="./assets/images/handayani.png" width="200px" height="300px" loading="lazy" alt=""
+            <img src="/assets/images/handayani.png" width="200px" height="300px" loading="lazy" alt=""
               class="img-cover">
-            <img src="./assets/images/rounded.png" width="169" height="172" alt="Pendaftaran Kampus" class="rotate-img">
+            <img src="/assets/images/rounded.png" width="169" height="172" alt="Pendaftaran Kampus" class="rotate-img">
           </div>
 
           <div class="hero-content">
@@ -154,7 +154,7 @@
               kepada masyarakat, serta berperan aktif dalam pembangunan bangsa melalui inovasi dan kolaborasi global.
             </p>
 
-            <a href="/resource/about.html" class="btn btn-primary blue">Selengkapnya</a>
+            <a href="about.html" class="btn btn-primary blue">Selengkapnya</a>
 
           </div>
 
@@ -178,7 +178,8 @@
           <ul class="portfolio-list">
 
             <li>
-              <a href="#" class="portfolio-card" style="background-image: url('./assets/images/portfolio-1.jpg')">
+              <a href="prodi.html" class="portfolio-card"
+                style="background-image: url('./assets/images/portfolio-1.jpg')">
                 <div class="card-content">
 
                   <p class="card-subtitle">Ilmu Komputer</p>
@@ -196,7 +197,8 @@
             </li>
 
             <li>
-              <a href="#" class="portfolio-card" style="background-image: url('./assets/images/portfolio-2.jpg')">
+              <a href="prodi.html" class="portfolio-card"
+                style="background-image: url('./assets/images/portfolio-2.jpg')">
                 <div class="card-content">
 
                   <p class="card-subtitle">Ilmu Komputer</p>
@@ -214,7 +216,8 @@
             </li>
 
             <li>
-              <a href="#" class="portfolio-card" style="background-image: url('./assets/images/portfolio-3.jpg')">
+              <a href="prodi.html" class="portfolio-card"
+                style="background-image: url('./assets/images/portfolio-3.jpg')">
                 <div class="card-content">
 
                   <p class="card-subtitle">Ilmu Komputer</p>
@@ -232,7 +235,8 @@
             </li>
 
             <li>
-              <a href="#" class="portfolio-card" style="background-image: url('./assets/images/portfolio-4.jpg')">
+              <a href="prodi.html" class="portfolio-card"
+                style="background-image: url('./assets/images/portfolio-4.jpg')">
                 <div class="card-content">
 
                   <p class="card-subtitle">Hukum & Ilmu Sosial</p>
@@ -339,14 +343,40 @@
 
       <!-- end EVENT -->
 
-
       <section class="section blog" id="gallery">
 
         <p class="section-subtitle">Gallery</p>
 
         <h2 class="h2 section-title">Gambar Kegiatan kampus</h2>
       </section>
-
+      <div class="image-gallery">
+        <figure class="snip0016">
+          <img src="/assets/images/gallery1.jpg" alt="sample41" />
+          <figcaption>
+            <h2>Kegiatan <span>kepanitiaan</span>di kampus</h2>
+            <p>Selain ikut organisasi, mahasiswa juga bisa mengikuti kegiatan kepanitiaan sebuah kegiatan. Kegiatan
+              kepanitiaan ini akan melatih tanggung jawab dalam sebuah pekerjaan.</p>
+            <a href="gallery.html"></a>
+          </figcaption>
+        </figure>
+        <figure class="snip0016">
+          <img src="/assets/images/gallery2.jpg" alt="sample42" />
+          <figcaption>
+            <h2>Ikut Program <span>Pertukaran Mahasiswa</span></h2>
+            <p>Pertukaran mahasiswa saat ini sudah salah satu kegiatan paling sering dilakukan oleh perguruan tinggi</p>
+            <a href="gallery.html"></a>
+          </figcaption>
+        </figure>
+        <figure class="snip0016">
+          <img src="/assets/images/gallery3.jpg" alt="sample43" />
+          <figcaption>
+            <h2>Mengikuti <span>Proyek</span> Dosen </h2>
+            <p>Ketika masuk di sebuah perguruan tinggi, pasti tidak asing sama yang namanya proyek dosen. Nah, proyek
+              dosen ini sangat cocok untuk diikuti.</p>
+            <a href="gallery.html"></a>
+          </figcaption>
+        </figure>
+      </div>
 
       <!--- #CONTACT-->
 
@@ -355,7 +385,7 @@
 
           <div class="contact-card">
 
-            <p class="card-subtitle">Pendaftaran</p>
+            <p class="card-subtitle">Admission & Contact</p>
 
             <h2 class="h2 section-title">Daftarkan dirimu disini</h2>
 
