--- a/prodi.html
+++ b/prodi.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tentang Kampus</title>
+  <title>Prodi Kampus</title>
   <link rel="shortcut icon" href="/assets/images/logo.png" type="image/svg+xml">
 
   <!-- custom css link -->
@@ -142,7 +142,7 @@
   </footer>
 
   <!-- custom js link -->
-  <script src="/assets/js/script.js"></script>
+  <script src="assets/js/script.js"></script>
 
   <!-- ionicon link -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
