--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container">
 
       <a href="#">
-        <img src="/assets/images/header.png" alt="" width="150px">
+        <img src="./assets/images/header.png" alt="" width="150px">
       </a>
 
       <button class="nav-toggle-btn" aria-label="Toggle Menu" data-nav-toggle-btn>
@@ -82,9 +82,9 @@
         <div class="container">
 
           <div class="hero-banner">
-            <img src="/assets/images/handayani.png" width="200px" height="300px" loading="lazy" alt=""
+            <img src="./assets/images/handayani.png" width="200px" height="300px" loading="lazy" alt=""
               class="img-cover">
-            <img src="/assets/images/rounded.png" width="169" height="172" alt="Pendaftaran Kampus" class="rotate-img">
+            <img src="./assets/images/rounded.png" width="169" height="172" alt="Pendaftaran Kampus" class="rotate-img">
           </div>
 
           <div class="hero-content">
@@ -351,7 +351,7 @@
       </section>
       <div class="image-gallery">
         <figure class="snip0016">
-          <img src="/assets/images/gallery1.jpg" alt="sample41" />
+          <img src="./assets/images/gallery1.jpg" alt="sample41" />
           <figcaption>
             <h2>Kegiatan <span>kepanitiaan</span>di kampus</h2>
             <p>Selain ikut organisasi, mahasiswa juga bisa mengikuti kegiatan kepanitiaan sebuah kegiatan. Kegiatan
@@ -360,7 +360,7 @@
           </figcaption>
         </figure>
         <figure class="snip0016">
-          <img src="/assets/images/gallery2.jpg" alt="sample42" />
+          <img src="./assets/images/gallery2.jpg" alt="sample42" />
           <figcaption>
             <h2>Ikut Program <span>Pertukaran Mahasiswa</span></h2>
             <p>Pertukaran mahasiswa saat ini sudah salah satu kegiatan paling sering dilakukan oleh perguruan tinggi</p>
@@ -368,7 +368,7 @@
           </figcaption>
         </figure>
         <figure class="snip0016">
-          <img src="/assets/images/gallery3.jpg" alt="sample43" />
+          <img src="./assets/images/gallery3.jpg" alt="sample43" />
           <figcaption>
             <h2>Mengikuti <span>Proyek</span> Dosen </h2>
             <p>Ketika masuk di sebuah perguruan tinggi, pasti tidak asing sama yang namanya proyek dosen. Nah, proyek
