--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
 
   <!-- 
     - google font link
@@ -27,7 +27,7 @@
     <div class="container">
 
       <a href="index.html">
-        <img src="./assets/images/header.png" alt="" width="150px">
+        <img src="/assets/images/header.png" alt="" width="150px">
       </a>
 
       <button class="nav-toggle-btn" aria-label="Toggle Menu" data-nav-toggle-btn>
@@ -77,10 +77,10 @@
 
       <figure class="about-banner">
 
-        <img src="./assets/images/24669.jpg" width="800" height="652" loading="lazy" alt="Perpustakaan"
+        <img src="/assets/images/24669.jpg" width="800" height="652" loading="lazy" alt="Perpustakaan"
           class="img-cover">
 
-        <img src="./assets/images/19855.jpg" width="900" height="717" loading="lazy" alt="Fasilitas Kampus"
+        <img src="/assets/images/19855.jpg" width="900" height="717" loading="lazy" alt="Fasilitas Kampus"
           class="abs-img">
 
         <div class="abs-icon abs-icon-1">
@@ -206,7 +206,7 @@
   <!-- ~
     - custom js link
   -->
-  <script src="./assets/js/script.js"></script>
+  <script src="/assets/js/script.js"></script>
 
   <!-- 
     - ionicon link
