--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </li>
 
           <li>
-            <a href="ontact.html" class="navbar-link" data-nav-link>Contact</a>
+            <a href="contact.html" class="navbar-link" data-nav-link>Contact</a>
           </li>
 
           <li>
