--- a/gallery.html
+++ b/gallery.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gallery Kampus</title>
-  <link rel="shortcut icon" href="/assets/images/logo.png" type="image/svg+xml">
+  <link rel="shortcut icon" href="./assets/images/logo.png" type="image/svg+xml">
 
   <!-- custom css link -->
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 
   <!-- google font link -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +23,7 @@
     <div class="container">
 
       <a href="index.html">
-        <img src="/assets/images/header.png" alt="" width="150px">
+        <img src="./assets/images/header.png" alt="" width="150px">
       </a>
 
       <button class="nav-toggle-btn" aria-label="Toggle Menu" data-nav-toggle-btn>
@@ -78,27 +78,27 @@
 
       <div class="gallery-grid">
         <figure class="gallery-item">
-          <img src="assets/images/gallery-1.jpg" alt="Gallery Image 1" class="img-cover">
+          <img src="./assets/images/gallery-1.jpg" alt="Gallery Image 1" class="img-cover">
           <figcaption class="gallery-caption">Kegiatan 1</figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="assets/images/gallery-2.jpg" alt="Gallery Image 2" class="img-cover">
+          <img src="./assets/images/gallery-2.jpg" alt="Gallery Image 2" class="img-cover">
           <figcaption class="gallery-caption">Kegiatan 2</figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="assets/images/gallery-3.jpg" alt="Gallery Image 3" class="img-cover">
+          <img src="./assets/images/gallery-3.jpg" alt="Gallery Image 3" class="img-cover">
           <figcaption class="gallery-caption">Kegiatan 3</figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="assets/images/gallery-4.jpg" alt="Gallery Image 4" class="img-cover">
+          <img src="./assets/images/gallery-4.jpg" alt="Gallery Image 4" class="img-cover">
           <figcaption class="gallery-caption">Kegiatan 4</figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="assets/images/gallery-5.jpg" alt="Gallery Image 5" class="img-cover">
+          <img src="./assets/images/gallery-5.jpg" alt="Gallery Image 5" class="img-cover">
           <figcaption class="gallery-caption">Kegiatan 5</figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="assets/images/gallery-6.jpg" alt="Gallery Image 6" class="img-cover">
+          <img src="./assets/images/gallery-6.jpg" alt="Gallery Image 6" class="img-cover">
           <figcaption class="gallery-caption">Kegiatan 6</figcaption>
         </figure>
       </div>
@@ -127,7 +127,7 @@
   </footer>
 
   <!-- custom js link -->
-  <script src="/assets/js/script.js"></script>
+  <script src="./assets/js/script.js"></script>
 
   <!-- ionicon link -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
