--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
           </li>
 
           <li>
-            <a href="#blog" class="navbar-link" data-nav-link>Admission</a>
+            <a href="pendaftaran.html" class="navbar-link" data-nav-link>Admission</a>
           </li>
 
         </ul>
