--- a/gallery.html
+++ b/gallery.html
@@ -59,7 +59,7 @@
           </li>
 
           <li>
-            <a href="#blog" class="navbar-link" data-nav-link>Admission</a>
+            <a href="pendaftaran.html" class="navbar-link" data-nav-link>Admission</a>
           </li>
 
         </ul>
