--- a/pendaftaran.html
+++ b/pendaftaran.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="./assets/images/logo.png" type="image/svg+xml">
 
   <!-- custom css link -->
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 
   <!-- google font link -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
