--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kontak Kampus</title>
-  <link rel="shortcut icon" href="/assets/images/logo.png" type="image/svg+xml">
+  <link rel="shortcut icon" href="./assets/images/logo.png" type="image/svg+xml">
 
   <!-- custom css link -->
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 
   <!-- google font link -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +23,7 @@
     <div class="container">
 
       <a href="index.html">
-        <img src="/assets/images/header.png" alt="" width="150px">
+        <img src="./assets/images/header.png" alt="" width="150px">
       </a>
 
       <button class="nav-toggle-btn" aria-label="Toggle Menu" data-nav-toggle-btn>
@@ -119,7 +119,7 @@
   </footer>
 
   <!-- custom js link -->
-  <script src="/assets/js/script.js"></script>
+  <script src="./assets/js/script.js"></script>
 
   <!-- ionicon link -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
